--- a/appp/templates/index.html
+++ b/appp/templates/index.html
@@ -4,30 +4,28 @@
     <title>MedNLP - 醫療詞彙識別</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            font-family: Arial, sans-serif;
             color: #333;
-            background-color: #f7f7f7;
         }
 
         h1 {
-            color: #5cb85c;
-            font-size: 2.5em;
             margin-bottom: 50px;
         }
 
         form, .output-box {
-            background-color: #fff;
+            background-color: white;
             padding: 30px;
             margin-bottom: 20px;
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
-            width: 70%;  
-            max-width: 500px; 
+            width: 70%;  /* 限制表單和輸出框的寬度 */
+            max-width: 500px; /* 最大寬度 */
             text-align: center;
         }
 
@@ -37,7 +35,6 @@
             margin-bottom: 20px;
             border: 1px solid #ddd;
             border-radius: 5px;
-            font-size: 1.1em;
         }
 
         input[type="submit"] {
@@ -47,24 +44,20 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 1.1em;
-            transition: background-color 0.3s ease;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #449d44;
+            font-size: 18px;
         }
 
         .output-box {
-            font-size: 1.3em;
+            font-size: 20px;
             color: #5cb85c;
-            word-wrap: break-word;
+            word-wrap: break-word;  /* 如果輸出的文字很長，這將使其自動換行 */
         }
     </style>
 </head>
 <body>
     <h1>歡迎使用 MedNLP - 醫療詞彙識別工具</h1>
-    <form method="get">
+    <form method="POST">
+        {% csrf_token %}
         <input type="text" name="input_text" placeholder="請在此輸入醫療相關的文字">
         <input type="submit" value="識別詞彙">
     </form>
