--- a/appp/templates/index.html
+++ b/appp/templates/index.html
@@ -2,16 +2,18 @@
 <html>
 <head>
     <title>MedNLP - 醫療詞彙識別</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
             background-color: #f7f7f7;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
             height: 100vh;
             font-family: Arial, sans-serif;
             color: #333;
+            overflow: auto;  /* 新增此行以啟用滾動 */
+            padding: 20px;  /* 新增此行以增加一些邊距 */
         }
 
         h1 {
@@ -52,15 +54,26 @@
             color: #5cb85c;
             word-wrap: break-word;  /* 如果輸出的文字很長，這將使其自動換行 */
         }
+        .output-box p {
+            text-align: left;  /* 將輸出文字左對齊 */
+        }
     </style>
 </head>
 <body>
     <h1>歡迎使用 MedNLP - 醫療詞彙識別工具</h1>
-    <form method="POST">
+    <form method="POST" action="{% url 'home' %}">
         {% csrf_token %}
         <input type="text" name="input_text" placeholder="請在此輸入醫療相關的文字">
         <input type="submit" value="識別詞彙">
     </form>
-    <div class="output-box">{{ output_text }}</div>
+
+    <div class="output-box">
+        <h2>原始文本</h2>
+        <p>{{ original_text }}</p>
+        <h2>標註結果 - 單詞標註</h2>
+        <p>{{ output_text }}</p>
+        <h2>標註結果 - 連續標註</h2>
+        <p>{{ continuous_output }}</p>
+    </div>
 </body>
 </html>
